# mdtable-cli

./: CHANGELOG.md  Cargo.toml  README.md  examples.md  mdtable
src/: config.rs  main.rs
